--- a/python_blockchain.ipynb
+++ b/python_blockchain.ipynb
@@ -752,7 +752,7 @@
     {
      "data": {
       "text/plain": [
-       "36589"
+       "23808"
       ]
      },
      "execution_count": 32,
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,10 +850,16 @@
     "        previous_hash=self.chain[-1].hash()\n",
     "        block=Block(time(), tuple(transactions), previous_hash)\n",
     "        \n",
-    "        for n in self.random_generator():\n",
+    "        for i, n in enumerate(self.random_generator()):\n",
     "            block.nonce=n\n",
     "            if self.verify_proof(block):\n",
     "                break\n",
+    "                \n",
+    "            if i % 100 == 0 and self.add_block(): # someone mined a block\n",
+    "                return True\n",
+    "            if i % 100 == 0 and self.resolve_conflicts(): # someone mined a block\n",
+    "                return True\n",
+    "                \n",
     "        self.broadcast_block(block)\n",
     "        return True # successfully mined\n",
     "    \n",
@@ -902,7 +908,6 @@
     "                # node is incorrect\n",
     "                continue\n",
     "            if len(chain)>len(authoritative_chain):\n",
-    "                print(\"found long chain\")\n",
     "                # Longest valid chain is authoritative\n",
     "                authoritative_chain=deepcopy(chain)\n",
     "        self.chain=authoritative_chain\n",
@@ -943,17 +948,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Wallet:\n",
-    "    def __init__(self, network):\n",
+    "    def __init__(self, network, nodes=None):\n",
     "        key=RSA.generate(1024)\n",
     "        self.private_key = decode_key(key)\n",
     "        self.address = decode_key(key.publickey())\n",
     "        self.network=network\n",
-    "        self.nodes=[]\n",
+    "        self.nodes=nodes or []\n",
     "    \n",
     "    def sign_transaction(self, transaction):\n",
     "        signer=PKCS1_v1_5.new(encode_key(self.private_key))\n",
@@ -980,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,20 +1044,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 317,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "genesis=Block(time(), (), \"0\")\n",
-    "network=Network()\n",
-    "alice=Wallet(network)\n",
-    "bob=Wallet(network)"
+    "# Demo: 分散blockchainのデモ\n",
+    "- multiprocessingでnetworkのデモを行う"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genesis=Block(time(), (), \"0\")\n",
+    "network=Network()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_nodes=7\n",
+    "nodes=[str(uuid4()) for _ in range(num_nodes)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,130 +1085,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "n=5\n",
-    "nodes=[str(uuid4()) for _ in range(n)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 320,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "found long chain\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "found long chain\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Mined a block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Mined a block\n",
-      "278ec8ec-33e2-4627-8eca-3f697ee8d0b7 Added one block\n",
-      "6fdd3449-c061-49f4-add6-fe37f9a6f102 Added one block\n",
-      "f99523e6-ca3b-495f-8c25-a3165312891c Added one block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Mined a block\n",
-      "32c483ce-fe3c-4f3b-a3ee-642f945a53b7 Added one block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Mined a block\n",
-      "0544c9f5-7e9c-4fed-a40a-1e3fa12536b9 Added one block\n"
-     ]
-    }
-   ],
    "source": [
     "workers=[]\n",
     "for uuid in nodes:\n",
@@ -1198,42 +1098,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alice.nodes=nodes[0:2]\n",
-    "bob.nodes=nodes[1:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 322,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "taro=Wallet(network)\n",
-    "taro.nodes=nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "taro.send(alice.address, 13)\n",
-    "bob.send(alice.address, 10)\n",
-    "alice.send(bob.address, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 353,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "taro.send(alice.address, 10)"
+    "num_people=5\n",
+    "people=[Wallet(network, random.sample(nodes, random.randint(1, len(nodes)))) for _ in range(num_people)]"
    ]
   },
   {
@@ -1245,78 +1115,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import clear_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 344,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_chains(network):\n",
-    "    while True:\n",
-    "        line=\"\"\n",
-    "        for k, v in network.chains.items():\n",
-    "            chain=BlockChain.json_loads(v)\n",
-    "            h=list(map(lambda x: x.hash()[:5], chain))\n",
-    "            line += \"--\".join(map(lambda x: f\"[{x}]\", h))\n",
-    "            line += \"\\n\"\n",
-    "        print(line)\n",
-    "        clear_output(True)\n",
-    "        sleep(0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 345,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "worker=mp.Process(target=draw_chains, args=(network,))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ab847]--[000a0]--[0003d]--[00057]--[00051]--[0006b]--[000d5]--[00050]--[00081]--[000f2]--[00011]--[0003b]\n",
-      "[ab847]--[000a0]--[000b7]--[0003b]--[0004f]--[0009e]--[000dd]--[000f9]--[000d9]--[00015]--[0002a]--[00028]\n",
-      "[ab847]--[000a0]--[0003d]--[00057]--[00051]--[0006b]--[000d5]--[00050]--[00081]--[000f2]--[00011]--[0003b]\n",
-      "[ab847]--[000a0]--[000b7]--[0003b]--[0004f]--[0009e]--[000dd]--[000f9]--[000d9]--[00015]--[0002a]--[00028]\n",
-      "[ab847]--[000a0]--[000b7]--[0003b]--[0004f]--[0009e]--[000dd]--[000f9]--[000d9]--[00015]--[0002a]--[00028]\n",
-      "\n"
+      "(Node: 5b85) [fe16a]--[00081]--[0001e]\n",
+      "(Node: 1ad6) [fe16a]--[00081]--[0001e]\n",
+      "(Node: 3e68) [fe16a]--[00081]--[0001e]\n",
+      "(Node: 97ef) [fe16a]--[00081]--[0001e]\n",
+      "(Node: 3b12) [fe16a]--[00081]--[0001e]\n",
+      "(Node: b436) [fe16a]--[00081]--[0001e]\n",
+      "(Node: 44e9) [fe16a]--[00081]--[0001e]\n"
      ]
     }
    ],
    "source": [
+    "from IPython.display import clear_output\n",
+    "def draw_chains(network):\n",
+    "    while True:\n",
+    "        line=\"\"\n",
+    "        for k, v in network.chains.items():\n",
+    "            line += f\"(Node: {k[:4]}) \"\n",
+    "            chain=BlockChain.json_loads(v)\n",
+    "            h=list(map(lambda x: x.hash()[:5], chain))\n",
+    "            line += \"--\".join(map(lambda x: f\"[{x}]\", h))\n",
+    "            line += \"\\n\"\n",
+    "        print(line.rstrip())\n",
+    "        clear_output(True)\n",
+    "        sleep(0.5)\n",
+    "\n",
+    "worker=mp.Process(target=draw_chains, args=(network,))\n",
     "worker.start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "worker.terminate()"
+    "for _ in range(random.randint(1,10)):\n",
+    "    sender, receiver= random.sample(people, 2)\n",
+    "    sender.send(receiver.address, random.randint(1, 100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
+    "worker.terminate()\n",
     "for worker in workers:\n",
     "    worker.terminate()\n",
     "network.shutdown()"
